--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -62,7 +66,6 @@
           "options": {
             "browserTarget": "nyxWolves:build",
             "proxyConfig": "src/proxy.conf.json"
-
           },
           "configurations": {
             "production": {
