added proxy for production

--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "nyxWolves:build:production"
+              "browserTarget": "nyxWolves:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             }
           }
         },
